outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-27_14-35-36/evaluations/problem_eval4905197806853707471_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to the closest unvisited node, always prioritizing the destination if unvisited and closer than the chosen candidate.}
                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to the closest unvisited node, always prioritizing the destination if unvisited and closer than the chosen candidate.}
                                                                                                                                  ^
SyntaxError: unmatched '}'
